--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.5",
     "next": "14.2.2",
     "react": "^18",
     "react-checkmark": "^2.0.0",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "eslint": "^8",
