--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "react": "^18",
     "react-checkmark": "^2.0.0",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^5.2.1",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
